--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ gunicorn
 markdown
 # For dev we can use SQLLite.  Uncomment the one you really want for production
 #mysql-python
-#psycopg2
+psycopg2
 python-social-auth
 pyzmail
 sphinx
